# collage

./: LICENSE  README.md  bric.py  pyproject.toml
collage/: __main__.py  bric.py  layout.py
